Correcting HTML file

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head><title>Hello Team Learntek!!</title></head>
+<head><title>Hello Team Learntek!!</title><meta charset="UTF-8"></head>
 <body>
 <H1>Congratulations!</h1>
 <p>Wonderful !!</p>
